--- a/src/app/component/food-option/food-option.component.html
+++ b/src/app/component/food-option/food-option.component.html
@@ -2,6 +2,9 @@
   <h1 class="text-2xl font-bold text-center mb-6">
     {{ foodType | titlecase }} Restaurants
   </h1>
+  <h2>Details for {{ foodType | titlecase }} Food</h2>
+  <!-- Add specific content here based on foodType -->
+
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     <div
       *ngFor="let restaurant of restaurants"
